outputs/tsp_constructive-constructive/2025-09-19_00-14-35/evaluations/problem_eval4440011513906472564_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance score (weighted by both direct and indirect connections) and an adaptive exploration factor that adjusts based on both remaining nodes and current path length, ensuring balanced exploration and exploitation.}
                                                                                                                                                                                                                              ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance score (weighted by both direct and indirect connections) and an adaptive exploration factor that adjusts based on both remaining nodes and current path length, ensuring balanced exploration and exploitation.}
                                                                                                                                                                                                                              ^
SyntaxError: unmatched '}'
